--- a/index.html
+++ b/index.html
@@ -80,53 +80,95 @@
                                             <li class="dropdown megamenu_dropdown">
                                                 <a href="" class="dropdown-toggle megamenu_toggle" id="othersubmenuhead" data-toggle="dropdown" data-hover="dropdown" role="button">
                                                     Shop by categories 
-                                                    <i class="fas fa-chevron-down"></i>
+                                                    <i class="fas fa-angle-down"></i>
                                                 </a>
                                                 <ul class="dropdown-menu dropdownhover-bottom megamenu_menu" role="menu" id="othersubmenuhead">
 
                                                     <li class="dropdown dropdown-submenu megamenu_subdrpdown">
-                                                        <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">Dress
+                                                        <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">Men's Fashion
                                                         </a>
 
                                                         <ul class="dropdown-menu dropdownhover-right row megamenu" role="menu">
                                                             <li class="col-md-6">
+                                                                <h3 class="megamenu_head">Men's clothing</h3>
                                                                 <ul class="megamenu_list">
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li class="divider"></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Clothing</a></li>
+                                                                    <li><a href="product_lists.html">T shirt and Polos</a></li>
+                                                                    <li><a href="product_lists.html">Shirt</a></li>
+                                                                    <li><a href="product_lists.html">Jeans</a></li>
+                                                                    <li><a href="product_lists.html">Inner wear</a></li>
+                                                                </ul>
+                                                                <span class="divider"></span>
+                                                                <h3 class="megamenu_head">Accessories</h3>
+                                                                <ul class="megamenu_list">
+                                                                    <li><a href="product_lists.html">Watch</a></li>
+                                                                    <li><a href="product_lists.html">Bag</a></li>
+                                                                    <li><a href="product_lists.html">Sun glass</a></li>
+                                                                    <li><a href="product_lists.html">Jwellery</a></li>
+                                                                    <li><a href="product_lists.html">Wallet</a></li>
                                                                 </ul>
                                                             </li>
 
                                                             <li class="col-md-6">
+                                                                <h3 class="megamenu_head">Men's Shoes</h3>
                                                                 <ul class="megamenu_list">
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li class="divider"></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                                    <li><a href="product_lists.html">Shoes</a></li>
+                                                                    <li><a href="product_lists.html">Sports shoes</a></li>
+                                                                    <li><a href="product_lists.html">Casual Shoes</a></li>
+                                                                    <li><a href="product_lists.html">Formal Shoes</a></li>
+                                                                </ul>
+                                                                <span class="divider"></span>
+                                                                <h3 class="megamenu_head">Stores</h3>
+                                                                <ul class="megamenu_list">
+                                                                    <li><a href="product_lists.html">Sports wear</a></li>
+                                                                    <li><a href="product_lists.html">Designer</a></li>
+                                                                    <li><a href="product_lists.html">Handlooms</a></li>
+                                                                    <li><a href="product_lists.html">Fashion sales and deals</a></li>
                                                                 </ul>
                                                             </li>
                                                         </ul>
                                                     </li>
                                                     <li class="dropdown dropdown-submenu">
-                                                        <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">About SUDC card</a>
+                                                         <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">Women's Fashion
+                                                        </a>
+                                                        <ul class="dropdown-menu dropdownhover-right row megamenu" role="menu">
+                                                            <li class="col-md-6">
+                                                                <h3 class="megamenu_head">Men's clothing</h3>
+                                                                <ul class="megamenu_list">
+                                                                    <li><a href="product_lists.html">Clothing</a></li>
+                                                                    <li><a href="product_lists.html">T shirt and Polos</a></li>
+                                                                    <li><a href="product_lists.html">Shirt</a></li>
+                                                                    <li><a href="product_lists.html">Jeans</a></li>
+                                                                    <li><a href="product_lists.html">Inner wear</a></li>
+                                                                </ul>
+                                                                <span class="divider"></span>
+                                                                <h3 class="megamenu_head">Accessories</h3>
+                                                                <ul class="megamenu_list">
+                                                                    <li><a href="product_lists.html">Watch</a></li>
+                                                                    <li><a href="product_lists.html">Bag</a></li>
+                                                                    <li><a href="product_lists.html">Sun glass</a></li>
+                                                                    <li><a href="product_lists.html">Jwellery</a></li>
+                                                                    <li><a href="product_lists.html">Wallet</a></li>
+                                                                </ul>
+                                                            </li>
 
-                                                        <ul class="dropdown-menu dropdownhover-bottom" role="menu">
-                                                            <li class=""><a href="about_card.html">About SUDC card</a></li>
-                                                            <li><a href="how_it_works.html">How it works?</a>
-                                                            <li><a href="membership.html">Memberships</a></li>
-                                                            <li><a href="customerbenfits.html">Member's benifits</a></li>
-                                                            <li><a href="testimonial.html">Member's testimonials</a></li>
+                                                            <li class="col-md-6">
+                                                                <h3 class="megamenu_head">Men's Shoes</h3>
+                                                                <ul class="megamenu_list">
+                                                                    <li><a href="product_lists.html">Shoes</a></li>
+                                                                    <li><a href="product_lists.html">Sports shoes</a></li>
+                                                                    <li><a href="product_lists.html">Casual Shoes</a></li>
+                                                                    <li><a href="product_lists.html">Formal Shoes</a></li>
+                                                                </ul>
+                                                                <span class="divider"></span>
+                                                                <h3 class="megamenu_head">Stores</h3>
+                                                                <ul class="megamenu_list">
+                                                                    <li><a href="product_lists.html">Sports wear</a></li>
+                                                                    <li><a href="product_lists.html">Designer</a></li>
+                                                                    <li><a href="product_lists.html">Handlooms</a></li>
+                                                                    <li><a href="product_lists.html">Fashion sales and deals</a></li>
+                                                                </ul>
+                                                            </li>
                                                         </ul>
                                                     </li>
                                                     <li class="dropdown dropdown-submenu">
