--- a/shop_detail.html
+++ b/shop_detail.html
@@ -351,13 +351,15 @@
                         <div class="col-md-4 col-sm-5 col-xs-12 shp_detl_">
                             <div class="tp_lnk"><a href="#">Flat 10% discount on Mobile Phones</a></div>
                         </div>
-                        <div class="col-md-8 col-sm-7 col-xs-12 pull-right shp_detl_se_more">
-                            <span class="text-left"> | </span>
-                            <a href="#">See more products</a>
-                            <span>
-                                <p class="shop_det_rat_spa">
-                                    <span class="rating"><span class="rat_str">4.3 <i class="icon-star"></i></span> 66 Reviews</span> | <a href="#">Write reviews</a>
-                                </p>
+                        <div class="col-md-8 col-sm-7 col-xs-12 shp_detl_se_more">
+                            <span class="shp_detl_se_more_wrapper">
+                                <span class="text-left"> | </span>
+                                <a href="#">See more products</a>
+                                <span class="shop_det_rat_span">
+                                    <p class="shop_det_rat_spa">
+                                        <span class="rating"><span class="rat_str">4.3 <i class="icon-star"></i></span> 66 Reviews</span> | <a href="#">Write reviews</a>
+                                    </p>
+                                </span>
                             </span>
                         </div>
                         <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
