--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                                                     </li>
                                                 </ul>
                                             </li>
+                                            <li><a href="about_card.html">Product & Shops</a></li>
                                             <li><a href="about_card.html">About SUDC card</a></li>
                                             <li><a href="membership.html">Membership</a></li>
 
