--- a/product_detail.html
+++ b/product_detail.html
@@ -12,13 +12,14 @@
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/product.css" />
         <link rel="stylesheet" href="css/product_detail.css" />
+        <link rel="stylesheet" href="css/product_detail.css" />
 
+        
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/common.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
-
+        <script src="js/zoomsl.js"></script>
 
     </head>
     <body>
@@ -304,7 +305,7 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-5 col-xs-12">
                         <div class="big_image_wraper">
-                            <img src="images/mobile.png" class="img-responsive detail_big_img" width="500"/>
+                            <img src="images/mobile.png" class="img-responsive detail_big_img block__pic" width="500"/>
                         </div>
                         <div class="col-md-12 col-sm-12 col-xs-12 thumbnail_image_detail">
                             <img src="images/thumbnail_mobile.png" class="img-responsive border_1 detail_img" />
