--- a/index.html
+++ b/index.html
@@ -45,17 +45,11 @@
             <div class="container">
                 <div class="row">
                     <div class="top_header text-right show_mobile">
-                        <a href="/phone.html">Customer care : <span class="ph_green">+123 4567 8901</span> </a>
+                        <a href="tel:+123 4567 8901">Customer care : <span class="ph_green">+123 4567 8901</span> </a>
                         <a href="/faq.html" class="">Business owner</a>
-
                     </div>
 
-                    <div class="col-md-3 col-sm-3 col-xs-8 logo_business">
-                        <div class="logo">
-                            <a href="index.html"><img src="images/logo.jpg" alt="Logo" class="img-responsive" /></a>
-                        </div>
-                    </div>
-                    <div class="col-md-9 col-sm-9">
+                    <div class="col-md-12 col-sm-12">
                         <div class="top_header text-right hide_mobile">
                             <a href="/phone.html">Customer care : <span class="ph_green">+123 4567 8901</span> </a>
                             <a href="/faq.html" class="hide_mobile">FAQ</a>
@@ -65,9 +59,14 @@
 
 
                         <div class="sudc_menu">
-                            <n av class="navbar navbar-default">
+                            <nav class="navbar navbar-default">
                                 <div class="container">
                                     <div class="navbar-header"> 
+                                        <div class="logo_business">
+                                            <div class="logo">
+                                                <a href="index.html"><img src="images/logo.jpg" alt="Logo" width="200" class="img-responsive" /></a>
+                                            </div>
+                                        </div>
                                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">	
                                             <span class="sr-only">Toggle navigation</span>	
                                             <span class="icon-bar"></span>					
@@ -129,7 +128,7 @@
                                                         </ul>
                                                     </li>
                                                     <li class="dropdown dropdown-submenu">
-                                                         <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">Women's Fashion
+                                                        <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">Women's Fashion
                                                         </a>
                                                         <ul class="dropdown-menu dropdownhover-right row megamenu" role="menu">
                                                             <li class="col-md-6">
@@ -264,7 +263,7 @@
                                     <!--/.nav-collapse -->
                                 </div>
                                 <!--/.container-fluid -->
-                                </nav>
+                            </nav>
                         </div>
                     </div>
                 </div>
