--- a/business.html
+++ b/business.html
@@ -20,34 +20,32 @@
         <header class="business">
             <div class="container">
                 <div class="row">
-
-                    <div class="col-md-3 col-sm-3 col-xs-8 logo_business">
-                        <div class="logo">
-                            <a href="index.html"><img src="images/White%20SUDC%20Logo.png" alt="Logo" class="img-responsive" /></a>
-                        </div>
-                    </div>
-                    <div class="col-md-9 col-sm-9">
+                    <div class="col-md-12 col-sm-12">
                         <div class="sudc_business_menu">
                             <nav class="navbar navbar-default">
-                                <div class="container no-padding">
-                                    <div class="navbar-header"> 
-                                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">	
-                                            <span class="sr-only">Toggle navigation</span>	
-                                            <span class="icon-bar"></span>					
-                                            <span class="icon-bar"></span>						
-                                            <span class="icon-bar"></span>						
-                                        </button> 
+
+                                <div class="navbar-header"> 
+                                    <div class="logo_business">
+                                        <div class="logo">
+                                            <a href="index.html"><img src="images/White%20SUDC%20Logo.png" alt="Logo" width="200" class="img-responsive" /></a>
+                                        </div>
                                     </div>
-                                    <div id="navbar" class="navbar-collapse collapse no-padding" aria-expanded="false" style="height: 1px;">
-                                        <ul class="nav navbar-nav">
-                                            <li class="phoneNumber">Need help : <span class="bold">+ 1234567890</span></li>
-                                            <li class="active"><a href="business_login.html" class="btn btn-lg">LOG IN</a></li>
-                                            <li><a href="business_signup.html" class="btn btn-lg">SIGN UP</a></li>
-                                        </ul>
-                                    </div>
-                                    <!--/.nav-collapse -->
+                                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">	
+                                        <span class="sr-only">Toggle navigation</span>	
+                                        <span class="icon-bar"></span>					
+                                        <span class="icon-bar"></span>						
+                                        <span class="icon-bar"></span>						
+                                    </button> 
                                 </div>
-                                <!--/.container-fluid -->
+                                <div id="navbar" class="navbar-collapse collapse no-padding" aria-expanded="false" style="height: 1px;">
+                                    <ul class="nav navbar-nav">
+                                        <li class="phoneNumber">Need help : <span class="bold">+ 1234567890</span></li>
+                                        <li class="active"><a href="business_login.html" class="btn btn-lg">LOG IN</a></li>
+                                        <li><a href="business_signup.html" class="btn btn-lg">SIGN UP</a></li>
+                                    </ul>
+                                </div>
+                                <!--/.nav-collapse -->
+
                             </nav>
                         </div>
                     </div>
@@ -217,13 +215,13 @@
                 </div>
             </div>
         </section>
-        
+
         <section class="business_info_section">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <p class="">
-                          Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repella
+                            Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repella
                         </p>
                     </div>
                 </div>
@@ -252,7 +250,7 @@
                         </div>
                         <div class="col-md-9 col-sm-9">
                             <p class="phone_ques">Got questions? Call us at 24/7!</p>
-                            <p class="phone">+123 4567 8901</p>                            
+                            <p class="tel:+123 4567 8901">+123 4567 8901</p>                            
                         </div>
 
                     </div>
