--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                         <div class="sudc_menu">
                             <nav class="navbar navbar-default">
-                                <div class="container">
+                                <div class="">
                                     <div class="navbar-header"> 
                                         <div class="logo_business">
                                             <div class="logo">
@@ -175,7 +175,7 @@
 
                                                         <ul class="dropdown-menu dropdownhover-bottom" role="menu">
                                                             <li class=""><a href="about_company.html">About company</a></li>
-                                                            <li><a href="core_value.html">Core values</a>
+                                                            <li><a href="core_value.html">Core values</a></li>
                                                             <li><a href="news_events.html">News and Events</a></li>
                                                             <li><a href="careers.html">Careers</a></li>
                                                             <li><a href="site_map.html">Site map</a></li>
