--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -40,13 +40,10 @@
                                 <div class="col-md-12">
                                     <form class="form form-inline">
                                         <div class="form-group from">
-                                            <label for="from">From : </label>
-                                            <input type="date" id="from" placeholder="From" class="form-control" />
+                                            <input type="text" id="from" placeholder="From" onfocus="(this.type='date')" onblur="(this.type='text')" class="form-control" />
+                                            <input type="text" id="to" placeholder="To" onfocus="(this.type='date')" onblur="(this.type='text')" class="form-control" />
                                         </div>
-                                        <div class="form-group to">
-                                            <label for="to">To : </label>
-                                            <input type="date" id="to" placeholder="To" class="form-control" />
-                                        </div>
+                           
                                         <div class="form-group city">
                                             <input type="text" placeholder="City" class="form-control" />
 
@@ -72,7 +69,7 @@
                                             <p>70%</p>
                                             <h5>Total Customers</h5> 
                                         </div>
-                                        <span class="seventy blue"></span> 
+                                        <span class="blue"></span>
                                     </div>
                                 </div>
                             </div>
@@ -85,7 +82,7 @@
                                             <p>70%</p>
                                             <h5>Total Business</h5> 
                                         </div>
-                                        <span class="seventy blue"></span> 
+                                        <span class="purpal"></span>
                                     </div>
                                 </div>
                             </div>
@@ -98,7 +95,7 @@
                                             <p>70%</p>
                                             <h5>Total Products</h5> 
                                         </div>
-                                        <span class="seventy blue"></span> 
+                                        <span class="green"></span>
                                     </div>
                                 </div>
                             </div>
@@ -111,7 +108,7 @@
                                             <p>70%</p>
                                             <h5>Total Users</h5> 
                                         </div>
-                                        <span class="seventy blue"></span> 
+                                        <span class="fifty purpal"></span>
                                     </div>
                                 </div>
                             </div>
