Udate from Riyas

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -43,7 +43,7 @@
                                             <input type="text" id="from" placeholder="From" onfocus="(this.type='date')" onblur="(this.type='text')" class="form-control" />
                                             <input type="text" id="to" placeholder="To" onfocus="(this.type='date')" onblur="(this.type='text')" class="form-control" />
                                         </div>
-                           
+
                                         <div class="form-group city">
                                             <input type="text" placeholder="City" class="form-control" />
 
@@ -67,9 +67,10 @@
                                         <div class="info-meta">
                                             <h4>5412</h4>
                                             <p>70%</p>
-                                            <h5>Total Customers</h5> 
+
                                         </div>
-                                        <span class="blue"></span>
+                                        <h5>Total Customers</h5> 
+                                        <span class="blue"><span class="percentage" style="width: 20%"></span></span>
                                     </div>
                                 </div>
                             </div>
@@ -80,9 +81,10 @@
                                         <div class="info-meta">
                                             <h4>5412</h4>
                                             <p>70%</p>
-                                            <h5>Total Business</h5> 
+
                                         </div>
-                                        <span class="purpal"></span>
+                                        <h5>Total Business</h5> 
+                                        <span class="purpal"><span class="percentage" style="width: 90%"></span></span>
                                     </div>
                                 </div>
                             </div>
@@ -93,9 +95,10 @@
                                         <div class="info-meta">
                                             <h4>5412</h4>
                                             <p>70%</p>
-                                            <h5>Total Products</h5> 
+                                            
                                         </div>
-                                        <span class="green"></span>
+                                        <h5>Total Products</h5> 
+                                        <span class="green"><span class="percentage" style="width: 30%"></span></span>
                                     </div>
                                 </div>
                             </div>
@@ -106,9 +109,9 @@
                                         <div class="info-meta">
                                             <h4>5412</h4>
                                             <p>70%</p>
-                                            <h5>Total Users</h5> 
                                         </div>
-                                        <span class="fifty purpal"></span>
+                                        <h5>Total Users</h5> 
+                                        <span class="maron"><span class="percentage" style="width: 70%"></span></span>
                                     </div>
                                 </div>
                             </div>
